specs/001-typescript-to-zig-native/examples/valid/math-stdlib.ts
let low = Math.abs(-4);
let high = Math.max(low, 9);
console.log(Math.min(high, 7));
