specs/001-typescript-to-zig-native/examples/invalid/math-type.ts
let bad = Math.abs("no");
